--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "skilled elearning landing page",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "compile:sass": "node-sass sass/main.scss css/style.css",
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "compress:css": "node-sass css/style.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass compress:css"
   },
   "author": "Hector B",
   "license": "ISC",
   "devDependencies": {
-    "node-sass": "^7.0.3"
+    "node-sass": "^7.0.3",
+    "npm-run-all": "^4.1.5"
   }
 }
